--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1325,22 +1325,26 @@
     <string name="title_medtrum_use_native">Medtrum Native</string>
     <string name="summary_medtrum_a_hex">Hex diagnostic test value</string>
     <string name="title_medtrum_a_hex">Medtrum Debug</string>
+    <string name="insulin_unit">U</string>
     <string name="summary_nsfollow_url">Web address for following</string>
     <string name="title_nsfollow_url">Nightscout Follow URL</string>
     <string name="summary_nsfollow_download_treatments">Also download treatments from Nightscout as follower</string>
     <string name="title_nsfollow_download_treatments">Download Treatments</string>
+    <string name="clfollow_status_next_cal_short">Cal</string>
+    <string name="clfollow_status_remain_life_short">Remain</string>
+    <string name="clfollow_status_max_basal_short">MaxB</string>
     <string name="title_clfollow_user">CareLink Username</string>
     <string name="summary_clfollow_user">CareLink login username</string>
     <string name="title_clfollow_pass">CareLink Password</string>
     <string name="summary_clfollow_pass">CareLink login password</string>
     <string name="title_clfollow_country">CareLink Country</string>
-    <string name="summary_clfollow_country">Select your CareLink country.</string>
+    <string name="summary_clfollow_country">CareLink country code</string>
     <string name="title_clfollow_lang">CareLink Language</string>
     <string name="summary_clfollow_lang">CareLink language code</string>
     <string name="title_clfollow_grace_period">Grace Period</string>
     <string name="summary_clfollow_grace_period">Grace period for data request in seconds</string>
-    <string name="title_clfollow_missed_poll_interval">Missed data poll interval</string>
-    <string name="summary_clfollow_missed_poll_interval">Polling interval after missed data in minutes</string>
+    <string name="title_clfollow_poll_interval">Missed data poll interval</string>
+    <string name="summary_clfollow_poll_interval">Polling interval after missed data in minutes</string>
     <string name="title_clfollow_download_finger_bgs">Finger BGs</string>
     <string name="summary_clfollow_download_finger_bgs">Download finger BGs from CareLink</string>
     <string name="title_clfollow_download_boluses">Boluses</string>
